# session-launch

./: interface.xml
c-sdbus/: Makefile  slaunch-service  slaunch-service.c
python-gdbus/: slaunch-client  slaunch-exec.py  slaunch-open.py  slaunch-service  slaunch-service.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs
