[package]
name = "session-launch"
version = "0.2.0"
authors = ["Simon Brulhart <simon@brulhart.me>"]
edition = "2021"

[[bin]]
name = "slaunch-client"
path = "src/bin/client.rs"

[[bin]]
name = "slaunch-service"
path = "src/bin/service.rs"

[dependencies]
dbus = "0.9.7"
dbus-tree = "0.9.2"
os_pipe = { version = "1.2.2", features = ["io_safety"] }
